--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -58,6 +58,9 @@
   }
 
   &--more {
+    grid-template-columns: 1fr;
+    align-items: center;
+
     @media (--desktop) {
       padding-top: 109px;
     }
@@ -138,6 +141,7 @@
   font-size: 16px;
   line-height: 20px;
   color: #111111;
+  text-align: center;
 
   @media (--not-mobile) {
     font-size: 20px;
