Адаптивные декоративные элементы

--- a/source/sass/blocks/catalog-button.scss
+++ b/source/sass/blocks/catalog-button.scss
@@ -10,7 +10,7 @@
   text-transform: uppercase;
   background-color: var(--accent-color);
   color: var(--secondary-color);
-  width: 280px;
+  width: 100%;
   box-sizing: border-box;
   text-align: center;
 
