--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -286,6 +286,7 @@
   @media (--desktop) {
     margin-top: 13px;
     padding-left: 30px;
+    padding-bottom: 25px;
 
     &:first-child {
       padding-top: 20px;
