--- a/source/sass/blocks/motivation.scss
+++ b/source/sass/blocks/motivation.scss
@@ -23,9 +23,14 @@
     font-size: var(--title-big);
     line-height: 60px;
     font-weight: 400;
-    padding-bottom: 51px;
-    margin: 0;
     padding-top: 48px;
+    margin-bottom: 60px;
+  }
+}
+
+.motivation__content {
+  @media (--not-mobile) {
+    margin-bottom: 76px;
   }
 }
 
@@ -183,6 +188,8 @@
 
   @media (--not-mobile) {
     width: 708px;
+    margin-inline: auto;
+    margin-bottom: 35px;
   }
 }
 
@@ -208,6 +215,10 @@
   grid-row: 1/-1;
   grid-column: 1/-1;
   overflow: hidden;
+
+  @media (--not-mobile) {
+    margin-left: 55px;
+  }
 }
 
 .motivation__controls {
@@ -224,48 +235,53 @@
 }
 
 .motivation__range {
+  position: relative;
   width: 84px;
   height: 14px;
   padding: 3px 5px;
   border: 1px solid #cdcdcd;
   border-radius: 10px;
   background-color: #ffffff;
-  appearance: none;
 
   @media (--not-mobile) {
     width: 426px;
     height: 6px;
     background-color: #dcdcdc;
+    border: 0;
+    border-radius: 10px;
+    padding: 0;
   }
 
-  &::-webkit-slider-thumb {
-    position: relative;
-    appearance: none;
+  .motivation__thumb {
     width: 50%;
     height: 6px;
     border-radius: 10px;
     background-color: var(--accent-color);
 
-    &::before {
-      content: "";
-      width: 8px;
-      height: 8px;
-      border-radius: 50%;
-      background-color: #68b738;
-      z-index: 2;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-
     @media (--not-mobile) {
-      border: 1 px solid #cdcdcd;
-      width: 8px;
-      height: 8px;
+      position: absolute;
+      width: 30px;
+      height: 30px;
+      border: 1px solid #cdcdcd;
       border-radius: 50%;
-      background-color: var(--accent-color);
-      box-shadow: 0 0 0 10px #ffffff;
+      background-color: #ffffff;
+      top: 0;
+      right: 50%;
+      transform: translate(50%, -45%);
+      cursor: pointer;
+
+      &::before {
+        content: "";
+        width: 8px;
+        height: 8px;
+        border-radius: 50%;
+        background-color: #68b738;
+        z-index: 2;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
     }
   }
 }
@@ -278,4 +294,9 @@
   background-color: #eaeaea;
   color: var(--primary-color);
   text-transform: uppercase;
+
+  @media (--not-mobile) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
