--- a/source/sass/blocks/principles.scss
+++ b/source/sass/blocks/principles.scss
@@ -17,7 +17,7 @@
     font-size: var(--title-big);
     line-height: 60px;
     margin-bottom: 30px;
-    padding-top: 20px;
+    padding-top: 25px;
   }
 }
 
@@ -32,7 +32,7 @@
   @media (--not-mobile) {
     grid-template-columns: repeat(auto-fill, minmax(245px, 1fr));
     column-gap: 72px;
-    padding-bottom: 0;
+    padding-bottom: 10px;
   }
 
   @media (--desktop) {
