--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -14,7 +14,7 @@
   @media (--desktop) {
     grid-template-columns: repeat(2, minmax(574px, 1fr));
     column-gap: 70px;
-    padding-left: 20px;
+    // padding-left: 20px;
     // grid-template-columns: repeat(auto-fill, minmax(570px, 1fr));
     // column-gap: 80px;
   }
@@ -22,16 +22,14 @@
 
 .programs__item {
   background-color: var(--bg-color-accent);
-  padding: 20px 20px;
+  // padding: 20px 20px;
 
   @media (--not-mobile) {
-    padding-left: 20px;
-    padding-top: 25px;
     padding-bottom: 10px;
 
     &:last-child {
       margin-bottom: 0;
-      padding-bottom: 8px;
+      padding-bottom: 0;
     }
   }
 
@@ -104,7 +102,9 @@
   }
 
   @media (--not-mobile) {
-    padding-left: 33px;
+    padding-left: 52px;
+    padding-top: 22px;
+    padding-right: 32px;
   }
 
   @media (--desktop) {
@@ -141,9 +141,19 @@
 
   &--weight {
     @media (--not-mobile) {
-      padding-top: 40px;
-      margin-bottom: 31px;
+      margin-left: 0;
+      margin-top: 0;
+      margin-bottom: 0;
+      padding-top: 56px;
+      padding-bottom: 20px;
+      // padding-top: 40px;
+      // margin-bottom: 31px;
+      // padding-bottom: 0;
+    }
+
+    @media (--desktop) {
       padding-bottom: 0;
+      margin-bottom: 70px;
     }
   }
 }
@@ -189,13 +199,15 @@
   &::after {
     content: "";
     position: absolute;
-    background-image: url("../../icons/sprite.svg#arrow-right.svg");
+    background-image: url("../../icons/sprite.svg#arrow-right");
+    background-size: 32px 12px;
     width: 24px;
     height: 12px;
-    top: 50%;
+    top: 18%;
     right: -40px;
     transform: translateY(-50%);
     transition: all 0.1s linear;
+    background-repeat: no-repeat;
 
     @media (--not-mobile) {
       right: -52px;
@@ -203,7 +215,8 @@
   }
 
   &:hover::after {
-    background-image: url("../../icons/sprite.svg#arrow-long.svg");
+    background-image: url("../../icons/sprite.svg#arrow-long");
+    background-size: 32px 12px;
     width: 32px;
     height: 12px;
     right: -52px;
