--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -2,7 +2,7 @@
   <div class="footer__container page__centerer">
     <div class="footer__logo-container">
       <a class="footer__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {% endif %}>
-        <img src="./img/logo-text.svg" alt="Логотип.">
+        <img src="./img/logo.svg#logo-text" alt="Логотип.">
       </a>
     </div>
     <div class="footer-social">
