--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,14 +1,14 @@
 <header class="main-header page__centerer main-header--no-js {{ permalink=='index.html' ? 'main-header--index' : '' }}">
   <a class="main-header__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {% endif %}>
     <picture>
-      <source media="(min-width: 1280px)" srcset="img/logo.svg#logo-desktop">
-      <source media="(min-width: 768px)" srcset="img/logo.svg#logo-tablet">
-      <img class="logo__image" src="img/logo.svg#logo-mobile" width="34" height="39" alt="cat energy">
+      <source media="(min-width: 1280px)" srcset="./img/logo.svg#desktop">
+      <source media="(min-width: 768px)" srcset="./img/logo.svg#tablet">
+      <img class="logo__image" src="./img/logo.svg#mobile" width="34" height="39" alt="cat energy">
     </picture>
   </a>
 
   <a href="#" class="main-header__title">
-    <img class="main-header__logo-text" src="img/logo.svg#logo-text" alt="Cat Energy" width="101" height="19">
+    <img class="main-header__logo-text" src="./img/logo.svg#text" alt="Cat Energy" width="101" height="19">
   </a>
 
   <nav class="main-nav main-nav--closed">
