--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -6,8 +6,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 13px;
+  padding-bottom: 15px;
 
   @media (--not-mobile) {
     padding-top: 74px;
@@ -45,9 +45,19 @@
   max-width: 139px;
 
   @media (--not-mobile) {
+    display: flex;
+    flex-direction: column;
+    max-width: 168px;
+    min-height: 84px;
+    text-align: right;
     font-size: 16px;
     line-height: 20px;
+    margin-right: 40px;
   }
+}
+
+.contacts__city {
+  margin-top: 20px;
 }
 
 .contacts__map {
