--- a/source/templates/contacts.twig
+++ b/source/templates/contacts.twig
@@ -7,7 +7,8 @@
       </p>
     </div>
     <address class="contacts__address">
-      ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+      ул. Большая Конюшенная, д. 19/8</br>
+      <span class="contacts__city">Санкт-Петербург</span>
     </address>
   </div>
   <div class="contacts__location">
