--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -1,8 +1,8 @@
 <footer class="footer">
   <div class="footer__container page__centerer">
     <div class="footer__logo-container">
-      <a class="footer__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {% endif %}>
-        <img src="./img/logo.svg#text" alt="Логотип.">
+      <a class="footer__logo" href="index.html" aria-label="Логотип сайта Cat Energy" {% if permalink=="index.html" %}aria-current="page" {% endif %}>
+        <img class="footer__logo-img" src="./img/logo.svg#footer-logo" width="128" height="24" alt="Логотип.">
       </a>
     </div>
     <div class="footer-social">
