--- a/source/sass/blocks/promotions.scss
+++ b/source/sass/blocks/promotions.scss
@@ -25,7 +25,8 @@
     width: 100%;
     margin-top: 65px;
     background-image: url("../../img/bg-promotions-tablet.jpg");
-    margin-bottom: 78px;
+    margin-bottom: 65px;
+    padding-bottom: 60px;
   }
 
   @media (--desktop) {
@@ -36,14 +37,16 @@
 }
 
 .promotions__icon {
-  background-image: url("../../icons/sprite.svg#gift.svg");
+  background-image: url("../../icons/sprite.svg#gift");
   background-repeat: no-repeat;
   width: 78px;
   height: 80px;
   margin: 0 auto;
 
   @media (--not-mobile) {
-    width: 70%;
+    width: 60%;
+    margin: 0;
+    margin-left: 10px;
   }
 }
 
