--- a/source/templates/_layout.twig
+++ b/source/templates/_layout.twig
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ pages[pageId].name }} | Cat Energy | HTML Academy</title>
+  <link rel="icon" href="favicon.ico"><!-- 32×32 -->
+  <link rel="icon" href="./img/favicons/icon.svg" type="image/svg+xml">
+  <link rel="manifest" href="./img/favicons/manifest.json">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
