Адаптивная графика страниц

--- a/source/sass/blocks/footer-social.scss
+++ b/source/sass/blocks/footer-social.scss
@@ -21,6 +21,10 @@
   @media (--not-mobile) {
     width: auto;
   }
+
+  @media (--desktop) {
+    margin-left: 40px;
+  }
 }
 
 .footer-social__item {
