--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -36,6 +36,10 @@
       background-position-x: right;
       z-index: -1;
       background-color: #68b738;
+
+      @media (min-resolution: --retina-dpi), (min-resolution: --retina-dppx) {
+        background-image: url("../../img/index-banner@2x.jpg"), linear-gradient(#65a83d, #62a53b);
+      }
     }
   }
 }
