--- a/source/sass/blocks/main-promo.scss
+++ b/source/sass/blocks/main-promo.scss
@@ -17,7 +17,7 @@
 }
 
 .main-promo__title {
-  font-family: var(--accent-font); //changed
+  font-family: var(--accent-font);
   font-size: var(--title-fs);
   font-weight: normal;
   line-height: 36px;
