--- a/source/sass/blocks/motivation.scss
+++ b/source/sass/blocks/motivation.scss
@@ -6,7 +6,7 @@
   }
 
   @media (--desktop) {
-    background-image: linear-gradient(180deg, #ffffff 170px, #eaeaea 170px);
+    background-image: linear-gradient(180deg, #ffffff 130px, #eaeaea 127px);
   }
 }
 
@@ -36,6 +36,10 @@
 .motivation__content {
   @media (--not-mobile) {
     margin-bottom: 76px;
+  }
+
+  @media (--desktop) {
+    margin-bottom: 0;
   }
 }
 
@@ -166,6 +170,7 @@
     @media (--desktop) {
       margin-left: 0;
       flex-direction: row;
+      margin-top: 30px;
     }
   }
 
@@ -195,6 +200,10 @@
 
     background-image: linear-gradient(180deg, #ffffff 170px, #eaeaea 170px);
   }
+
+  @media (--desktop) {
+    background-image: linear-gradient(180deg, #ffffff 130px, #eaeaea 127px);
+  }
 }
 
 .motivation__slider {
@@ -214,7 +223,7 @@
   @media (--desktop) {
     margin-top: -47px;
     height: 511px;
-    background-image: linear-gradient(#ffffff 217px, #eaeaea 170px);
+    background-image: linear-gradient(#ffffff 177px, #eaeaea 170px);
   }
 }
 
