--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -12,6 +12,10 @@
     justify-content: space-between;
     padding: 15px 0;
   }
+
+  @media (--desktop) {
+    padding: 42px 0;
+  }
 }
 
 .footer__logo {
