--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -14,4 +14,7 @@
   --details-color: #ebebeb;
   --title-color: #222222;
   --description-color: #444444;
+
+  --retina-dpi: 144dpi;
+  --retina-dppx: 1.5dppx;
 }
