--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -12,6 +12,10 @@
 
 .form__group {
   border: none;
+
+  @media (--not-mobile) {
+    margin-bottom: 15px;
+  }
 }
 
 .form__group-wrapper {
@@ -39,11 +43,29 @@
   border: none;
   padding: 0;
 
+  @media (--not-mobile) {
+    font-size: var(--title-fs);
+    line-height: 36px;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    margin-bottom: 0;
+  }
+
   &--contacts {
     padding-top: 26px;
+
+    @media (--not-mobile) {
+      padding-bottom: 30px;
+    }
   }
 
   &--comment {
+    @media (--not-mobile) {
+      padding-top: 30px;
+      padding-bottom: 0;
+      margin-bottom: 68px;
+    }
+
     @media (--desktop) {
       margin-bottom: 30px;
     }
@@ -54,35 +76,37 @@
       padding-top: 49px;
     }
   }
-
-  @media (--desktop) {
-    font-size: var(--title-fs);
-    line-height: 36px;
-    padding-top: 40px;
-    padding-bottom: 20px;
-    margin-bottom: 0;
-  }
 }
 
 .heading {
   position: relative;
+  --air-gap: 20px;
+  --line-color: #68b738;
+  width: fit-content;
 
   &::after {
     content: "";
-    z-index: -2;
-    top: 60px;
-    left: calc(100% + 30px);
-    width: 100vw;
-    height: 2px;
-    background-color: #68b738;
+    // z-index: -2;
+    // top: 60px;
+    // left: calc(100% + 30px);
+    top: 50%;
     position: absolute;
+    background-color: var(--line-color);
+    left: calc(100% + var(--air-gap));
+    width: calc(100vh + 100% - var(--air-gap));
+    height: 2px;
+    box-shadow: calc(100vw + var(--air-gap)) 0 0 0 var(--line-color);
+
+    @media (--not-mobile) {
+      left: calc(100% + 30px);
+    }
   }
 
   &::before {
     content: "";
     z-index: -2;
     right: calc(100% + 30px);
-    top: 60px;
+    top: 50%;
     width: 100vw;
     height: 2px;
     background-color: #68b738;
@@ -114,6 +138,10 @@
   white-space: nowrap;
   align-items: center;
 
+  @media (--not-mobile) {
+    margin-bottom: 19px;
+  }
+
   @media (--desktop) {
     margin-bottom: 0;
   }
@@ -126,6 +154,7 @@
     @media (--not-mobile) {
       grid-template-columns: 6% auto;
       gap: 20px;
+      margin-bottom: 0;
     }
   }
 }
@@ -172,6 +201,7 @@
   @media (--not-mobile) {
     width: 40px;
     height: 40px;
+    margin-bottom: 12px;
   }
 
   &:focus {
@@ -183,6 +213,11 @@
 .form__contacts {
   display: flex;
   justify-content: space-between;
+
+  @media (--not-mobile) {
+    padding-bottom: 0;
+    margin-bottom: 12px;
+  }
 
   @media (--desktop) {
     max-width: 1220px;
@@ -202,6 +237,10 @@
   transform: translateY(15%);
   height: 57px;
 
+  @media (--not-mobile) {
+    padding-bottom: 25px;
+  }
+
   @media (--desktop) {
     margin-bottom: 20px;
   }
@@ -220,6 +259,13 @@
 
   &:focus:invalid ~ span {
     --fill: #ff8282;
+  }
+
+  &--email,
+  &--phone {
+    @media (--not-mobile) {
+      margin-left: 30px;
+    }
   }
 }
 
@@ -265,7 +311,8 @@
 
   @media (--not-mobile) {
     padding-top: 25px;
-    padding-bottom: 25px;
+    padding-bottom: 0;
+    margin-bottom: 45px;
   }
 
   @media (--desktop) {
@@ -281,6 +328,9 @@
   @media (--not-mobile) {
     border-right: 1px solid #e7e7e7;
     border-left: 1px solid #e7e7e7;
+    padding-top: 13px;
+    padding-left: 20px;
+    padding-bottom: 20px;
   }
 
   @media (--desktop) {
@@ -303,6 +353,12 @@
 .form__feedback {
   width: 100%;
   height: 150px;
+
+  @media (--not-mobile) {
+    height: 174px;
+    padding-top: 10px;
+    padding-left: 25px;
+  }
 
   @media (--desktop) {
     padding-top: 20px;
