--- a/source/sass/blocks/promotions.scss
+++ b/source/sass/blocks/promotions.scss
@@ -41,6 +41,15 @@
     width: 245px;
     min-width: auto;
     margin-top: 0;
+    flex-direction: column;
+    background-image: url("../../img/bg-promotions.jpg");
+    background-size: cover;
+    padding-bottom: 40px;
+
+    @media (min-resolution: --retina-dpi), (min-resolution: --retina-dppx) {
+      background-image: url("../../img/bg-promotions@2x.jpg");
+      background-size: 245px auto;
+    }
   }
 }
 
@@ -55,6 +64,10 @@
     width: 60%;
     margin: 0;
     margin-left: 10px;
+  }
+
+  @media (--desktop) {
+    width: 78px;
   }
 }
 
@@ -72,5 +85,13 @@
     line-height: 20px;
     text-align: left;
     margin: 0;
+  }
+
+  @media (--desktop) {
+    width: 161px;
+    text-align: center;
+    padding-left: 7px;
+    padding-right: 7px;
+    padding-top: 53px;
   }
 }
