--- a/source/templates/_layout.twig
+++ b/source/templates/_layout.twig
@@ -6,11 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ pages[pageId].name }} | Cat Energy | HTML Academy</title>
-  <link rel="icon" href="favicon.ico"><!-- 32×32 -->
-  <link rel="icon" href="./img/favicons/icon.svg" type="image/svg+xml">
-  <link rel="manifest" href="./img/favicons/manifest.json">
   <link rel="stylesheet" href="./css/style.css">
-</head>
+  <link rel="icon" href="favicon.ico" sizes="any"><!-- 32×32 -->
+  <link rel="icon" href="./favicons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="./favicons/apple-touch-icon.png"><!-- 180×180 -->
+  <link rel="manifest" href="/manifest.webmanifest">
+  </head>
 
 <body class="page__body">
   {% include "./header.twig" %}
